--- a/client/package.json
+++ b/client/package.json
@@ -32,9 +32,13 @@
     "tailwindcss": "^4.1.11",
     "vite": "^7.0.6"
   },
+  "engines": {
+  "node": "18.x"
+},
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "eslint.config.js",
   "keywords": [],
   "author": "",
   "license": "ISC"
+  
 }
